--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -68,7 +68,8 @@ I'll start off with a simple histogram of how many miles I ran throughout each m
 ```{r plotting, echo = FALSE, fig.align='center'}
 #distance histogram
 ggplot(data = philly, aes(x = Distance)) + 
-  geom_histogram(binwidth = 2, aes(fill = ..count..), colour = "black", boundary = 2) +
+  geom_histogram(binwidth = 2, aes(fill = MarathonName), colour = "black", boundary = 2) +
+  scale_fill_manual(values = c("red","#338dff")) + 
   theme_bw() + 
   scale_x_continuous(limits = c(0, 30)) +
   xlab("Distance (mi)") + 
@@ -80,7 +81,7 @@ ggplot(data = philly, aes(x = Distance)) +
 
 Just like [last year](https://stevenewns.netlify.com/2017/04/18/marathon-training-plan-data-analysis/), I again can see the actual marathon itself and my one 24 mile run, the longest **Long Run** of the plan, all the way to the right of the plot. It also looks like I had less runs that were between 16-18 miles and more runs between 22-24 miles this year. This distribution is right/positively-skewed, with the majority of the runs being less than 12 miles. Also, as expected after choosing a higher mileage plan, the 2017 histogram has some taller bars, indicating a larger number of runs overall, with bars for the same distance being noticeably higher in 2017 compared to 2016.
 
-The majority of my runs in this 2017 training block were around 4-6 miles, with the next highest frequency being from 10-12 miles. The fact that most of my runs were from 4-6 miles is not surprising when noting that the majority of my runs were recovery runs, which went from a minimum of 3 miles up to a maximum of 7 miles, for them most part. Sometimes I combined two recovery runs into one run due time constraints and moreso to my regrettable obsession with hitting as much of my planned mileage as possible at the expense of truly recovering from hard efforts.
+The majority of my runs in this 2017 training block were around 4-6 miles, with the next highest frequency being from 10-12 miles. The fact that most of my runs were from 4-6 miles is not surprising when noting that the majority of my runs were recovery runs, which went from a minimum of 3 miles up to a maximum of 7 miles, for them most part. Sometimes I combined two recovery runs into one run due time constraints and more-so to my regrettable obsession with hitting as much of my planned mileage as possible at the expense of truly recovering from hard efforts.
 
 ```{r, un type counts, echo = F}
 philly %>%
@@ -103,17 +104,17 @@ philly %>%
 philly %>%
   filter(Marathon == "ph17") %>%
   ggplot(aes(Date, Distance)) + 
-    geom_bar(stat="identity", fill = "green", colour = "black") +
+    geom_bar(stat="identity", fill = "#338dff", colour = "black") +
     theme_bw() + 
     xlab("Date") + 
     ylab("Miles") + 
-    ggtitle("Runs Over Time") +
+    ggtitle("Runs Over Time :2017") +
     guides(fill = FALSE) +
     coord_cartesian(xlim = c(as.POSIXct("2017-09-05", format = "%Y-%m-%d"),
                              as.POSIXct("2017-10-25", format = "%Y-%m-%d")))
 ```
 
-That *very* tiny bar around September 14th was where I hurt my quad for the first time within a mile and a half of the planned run, with the run the following day being cut short after 10 miles when the pain came back (again, due to my stubbornness). Then again, in the second half of October, the same pain came back right before a tune-up race workout, so I took 2 days off to be safe and avoid any further aggrivation of my quad so as to not miss another workout.
+That *very* tiny bar around September 14th was where I hurt my quad for the first time within a mile and a half of the planned run, with the run the following day being cut short after 10 miles when the pain came back (again, due to my stubbornness). Then again, in the second half of October, the same pain came back right before a tune-up race workout, so I took 2 days off to be safe and avoid any further aggravation of my quad so as to not miss another workout.
 
 Now, to look at the summary of both marathons plans' overall distance data:
 ```{r distance summary, echo = F}
@@ -125,9 +126,11 @@ philly %>%
   kable()
 ```
 
-So, since I have a skewed distribution, I'd want to look at median to compare measures of center. I can see the median number of miles ran in a run for 2017 is 7 miles, which is lower than 10 miles for last year (this year's mean was also lower), which I can infer was due to the higher number of the shorter recovery runs this time around, especially during the double-run days. And again, we see that the max distance here is, of course, the actual marathon, even though something must have been up with my GPS watch or the course, as it says I ran about .15 miles moreso than the actual race distance. Like I needed *that*.
+So, since I have a skewed distribution, I'd want to look at median to compare measures of center. I can see the median number of miles ran in a run for 2017 is 7 miles, which is lower than 10 miles for last year (this year's mean was also lower), which I can infer was due to the higher number of the shorter recovery runs this time around, especially during the double-run days. And again, we see that the max distance here is, of course, the actual marathon, even though something must have been up with my GPS watch or the course, as it says I ran about .15 miles more-so than the actual race distance. Like I needed *that*.
 
 Now let's look at the total number of miles ran each month, with an initial expectation to see the total rise month by month.
+
+## TO-DO:: BARS ON SAMPLE PLOT?
 ```{r miles by month, echo = FALSE, fig.align='center'} 
 #miles by month bars
 ggplot(philly, aes(Month, Distance, fill = Month)) + 
@@ -140,7 +143,7 @@ ggplot(philly, aes(Month, Distance, fill = Month)) +
   facet_grid( ~ MarathonName)
 ```
 
-Somewhat against what was expected, my total mileage in November was actually shorter this time around, while the other months all did have higher totals. It makes sense in hindsight that September and October hada bit lower of total mileage than August, as August was the only month in which I did not take time off due to injury. But, I believe I also took some more days off in November this year because I was feeling quite fatigued and was worried I would go into the race too beat up, which I still think I did in the end (but it could've been worse, right?).
+Somewhat against what was expected, my total mileage in November was actually shorter this time around, while the other months all did have higher totals. It makes sense in hindsight that September and October had a bit lower of total mileage than August, as August was the only month in which I did not take time off due to injury. But, I believe I also took some more days off in November this year because I was feeling quite fatigued and was worried I would go into the race too beat up, which I still think I did in the end (but it could've been worse, right?).
 
 ```{r, echo = F}
 philly %>%
@@ -161,6 +164,8 @@ Last year, my cadence generally increased month over month, albeit *barely*, and
 ggplot(data = philly, aes(Month, Avg.Cadence)) + 
   geom_jitter(aes(colour = Month)) +
   geom_boxplot(aes(fill = Month), outlier.colour = "black", alpha = 0.5) +
+  scale_colour_brewer(palette = "Set1") +
+  scale_fill_brewer(palette = "Set1") +
   theme_bw() + 
   xlab("") + 
   ylab("Avg. Cadence (Steps/Min)") + 
@@ -200,22 +205,22 @@ hr16 <- philly %>%
     xlab("2016") + 
     ylab("Average Heart Rate") + 
     ggtitle("Average Heart Rate Over Time") + 
-    coord_cartesian(ylim = c(100,160))
+    coord_cartesian(ylim = c(100, 160))
 
 hr17 <- philly %>%
   filter(Marathon == "ph17") %>%
   ggplot(data = , aes(Date, Avg.HR)) + 
-    geom_line(aes(group=1)) +
-    geom_smooth(method = "lm", se=T) + 
-    theme(axis.text.x = element_blank()) +
+    geom_line(aes(group=1, colour = "green")) +
+    geom_smooth(method = "lm", se = T, colour = "#338dff") + 
+    theme(axis.text.x = element_blank(), legend.position = "none") +
     xlab("2017") + 
     ylab("Average Heart Rate") + 
-    coord_cartesian(ylim = c(100,160))
+    coord_cartesian(ylim = c(100, 160))
 
-grid.arrange(hr16, hr17, nrow=2)
+grid.arrange(hr16, hr17, nrow = 2)
 ```
 
-So, it looks like my average heart rate decreased over time, barring two random extreme drops (shout-out again to my heart rate monitor). Let's check it out by month.
+So, it looks like my average heart rate stayed pretty steady over the course of this plan, with possibly a minuscule increase there at the end, which may lend credence to my hypothesis that I went into the race too beat up, so my heart rate was higher than it would've been had I been fully rested. But, a more positive indication to note is that my average heart rate started and ended at a significant lower amount than last year, indicating that I was more fit this year, which I would've hoped, even with a pretty unstructured break from the end of last year's marathon up to this year's plan start.
 
 ```{r HR by month boxplot, echo = FALSE, fig.align='center'}
 #avg. HR grouped by month
@@ -229,10 +234,7 @@ ggplot(data = philly, aes(Month, Avg.HR)) +
   ggtitle("Average Heart Rate per Month") + facet_grid(~ MarathonName)
 ```
 
-Opposite to cadence, had more variance this year, but 1st 4 months were all lower, less outliers this time, November similar
-
-
-#So we can see that my heart rate had generally decreased month over month, albeit *barely*. *Again*. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as the seasons moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
+Opposite to cadence, I had more variance this each month in 2017, but good = 1st 4 months were all lower, less outliers this time, November similar. I would assume it's due to more recovery runs at lower heart rates making these boxes taller
 
 Now let's look at cadence and heart rate by Run Type as well for comparisons.
 
@@ -246,8 +248,8 @@ philly %>%
     geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
     theme_bw() +
     theme(legend.position = "none") + 
-    scale_colour_brewer(palette = "Set1") +
-    scale_fill_brewer(palette = "Set1") +
+    scale_colour_brewer(palette = "Set2") +
+    scale_fill_brewer(palette = "Set2") +
     xlab("Run Type") + 
     ylab("Cadence") + 
     guides(fill=FALSE) +
@@ -256,24 +258,27 @@ philly %>%
     facet_grid(~ MarathonName)
 ```
 
-Again, higher less variance, Long run had highest, workour lowest w/ most outliers *recovery jogs), recovery lowest (shuffling)
+Similar to cadence over time, I had a higher average cadence for each run type, and less variance among each run type, especially in the workout category. I see the my long runs had highest median cadence. This is something I can be happy with, as the length of these runs mimic the marathon the most, so I would hope to keep a higher and more consistent cadence through these runs. My recovery runs had the lowest cadence, which does not surprise me as I find it difficult to keep up cadence and my pace slows down. My workouts were the second lowest this year, but with the most outliers. From my experiences last year, where workouts had the lowest average cadence, I can be quite confident that the recovery jogs between intervals and tempos were the cause of this, similar to how in recovery runs I find it hard to keep up cadence while slowing down, which I am working on in the spring build-up.
 
-#We can ignore the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs, as well as normal runs, were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median and the widest variety. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. 
-
-Now let's see if cadence and heart rate seem to have anything to do with each other.
+Now I will again check to see the relationship between my average cadence and m average heart rate.
 
 ```{r cadence by hr, echo = FALSE, messages = FALSE, fig.align='center'}
-ggplot(data = philly, aes(Avg.Cadence, Avg.HR)) + 
-  geom_point(aes(colour = RunType), na.rm = TRUE) +
-  theme_bw() +
-  xlab("Cadence") + 
-  ylab("Average Heart Rate") + 
-  scale_y_continuous(limits = c(110, 160)) +
-  ggtitle("Average Heart Rate by Cadence") + 
-  facet_grid(~ MarathonName)
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%  
+  ggplot(aes(Avg.Cadence, Avg.HR)) + 
+    geom_point(aes(colour = RunType), na.rm = TRUE) +
+    theme_bw() +
+    xlab("Cadence") + 
+    ylab("Average Heart Rate") + 
+    scale_y_continuous(limits = c(110, 160)) +
+    ggtitle("Average Heart Rate by Cadence") + 
+    facet_grid(~ MarathonName)
 ```
 
-By looking at average heart rate by average cadence, we can see that there is no relationship at all here. I honestly expected heart rate to increase a bit as cadence increased, which it does sharply for Recovery Runs, but it actually looks to decrease as cadence increased during Normal Runs, and a bit as well during Workouts. Maybe I was more efficient in my running form than I thought during these runs. Now let's look at heart rate by runs types to see if there's some effect there.
+Similar to last year, there is no concrete relationship here. But, we can note that there's again more evidence of the higher  average cadence overall, as most dots are above 170 and hovering near 180 steps per minute. Also, the long runs are (as suggested by the box plot) higher up, while recovery runs are more towards the bottom.
+
+We can now flip this run type analysis from cadence to hear rate.
 
 ```{r heart rate by run type, echo = FALSE, fig.align='center'}
 #avg. cadence grouped by month
@@ -293,22 +298,11 @@ philly %>%
     facet_grid(~ MarathonName)
 ```
 
+Well, barring those higher outliers in the recovery runs, which I cna only assume are those more "beat-up" runs where I would've been skipping the run and fully recovering between those harder efforts. But, I was much better at keeping my hear rate lower this time around druing recovery runs and doing so at a relatilvey more consistent rate. Average heart rate decreased a but more this year, but was also a bit more variable, while my genearl aerobic runs increased in variety quite a bit. I would assume this is due to some middle-long runs I remember being more difficult than they should've been. 
+
 workout hear rate similar good b/c usually have targets to higt, low variance, much lower vraiance in recovery = more consistenet even if run too hard, long runs a bit more varies this year, GA much more varies. Overall each run type lower
 
-
-#As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
-
-```{r max heart rate, echo = FALSE}
-philly %>%
-  filter(Marathon == "ph17") %>%
-  arrange(desc(Avg.HR)) %>%
-  select("Name","Date","Distance","Avg.HR","Max.HR") %>%
-  head(1)
-  #philly[which.max(philly[philly$Marathon =="ph17",]$Avg.HR),] %>%
-  #select("Name","Date","Distance","Avg.HR","Max.HR")
-```
-
-So we can see that my max heart rate was during my a reoery rin???????? hot????? too beat up????
+### Pace
 
 Let's now check out my average pace over time, split out by Run Type. I would hope that it would have decreased, just as average heart rate did, due to both increased form and increased fitness, as well as possibly due to decreased outside temperatures making it easier to run faster. 
 
@@ -349,26 +343,6 @@ philly %>%
 ```
 
 And, we see that workouts had the lowest average pace, which seemed to actually decrease a tad until about halfway through the plan, but there was a variety of different workouts with different focuses, so this really isn't something we can glean anything out of. Long Runs start to decrease in average pace, possibly due to an increase in outside temperature from July to August causing me to slow down, but then we see a rapid increase, which start sto taper off at the end there. Normal runs seemed to have a more gradual increase over time, but it sped up a bit compared to at the start. Then we see that recovery runs increased down even more so compared to Long Runs, but also had a drop as temperatures cooled (or fitness increased, either or. Maybe both). There was then a quick uptick at the end there, which I would assume would be due to slowing down even more as I tapered for the race, with the 2 slowest recovery runs happening just before the race. We then see the race there, at about 7:10 min/mile, which, while I am happy with my results, I would *love* to get this down under 7:00 min/mile in my next marathon, Philly 2017, with the goal of running about 6:50 min/mile so as to break 3 hours!
-
-```{r bar of steps, echo = FALSE, fig.align='center'}
-table(philly$RunType)
-
-philly %>%
-  filter(RunType != "Race",
-         RunType != "Misc") %>%
-  ggplot(aes(RunType,(Avg.Cadence*((hour(Time)*60)+
-                                     (minute(Time))+(second(Time)/60))))) + 
-    geom_bar(aes(fill = RunType), stat = "identity") +
-    theme_bw() + 
-    xlab("Run Type") + 
-    ylab("Steps") + 
-    guides(fill=FALSE) +
-    ggtitle("Total Steps Taken by Run Type") +
-    facet_grid(~ MarathonName)
-```
-# AVERAGE BY TIME
-
-Here we see the majority of runs I had were normal runs, with just a bit less recovery runs. But then in the bar chart, we can see that even though I only just over one quarter of the amount of long runs compared to the amount of recovery runs, the sum of steps taken during my long runs was greater than the sum of steps taken in all of my recovery runs. This makes sense, due to how much longer my long runs were, both in distance and in duration. We also see that steps taken during workouts was quite high compared to steps taken during recovery runs, despite having being just under a third of the amount of recovery runs.
 
 Let's see if my elevation gain had any affect on my average heart rate. I expect that it would, since a larger eleveation gain meant I was climbing more, which requires more exertion, so I expect my average heart rate to be higher with a higher elevation gain.
 
